Below changes: look for details
* implements summary for merge requests
* passes channel name to slack requests
* new structure for application configuration

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,9 +1,12 @@
 tasks:
-  - apiUrl: ${API_URL}
-    apiToken: ${API_TOKEN}
-    channelNameWebHookUrlMap:
-      any_ci_channel: ${HOOK_FOR_CI_CHANNEL}
-    periodAsHour: 2
-    startingTimeAsHour: 10
-    endingTimeAsHour: 18
+  - gitRepositoryConfig:
+      apiUrl: ${API_URL}
+      apiToken: ${API_TOKEN}
+    messageConfig:
+      channelNameWebHookUrlMap:
+        any_ci_channel: ${HOOK_FOR_CI_CHANNEL}
+    taskConfig:
+      periodAsHour: 2
+      startingTimeAsHour: 10
+      endingTimeAsHour: 18
 startingTime: "08:40"
